[tool.poetry]
name = "advent-of-code"
version = "0.1.0"
description = "Solutions to the Advent of Code Questions"
authors = ["MilaDog <daniel.ryan.sergeant@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{ include = "src" }]

[tool.poetry.dependencies]
python = "^3.10"
pre-commit = "^3.5.0"
python-dotenv = "^1.0.0"
ruff = "^0.7.4"
pyright = "^1.1.389"
regex = "^2024.11.6"
numpy = "^2.1.3"
pandas = "^2.2.3"
requests = "^2.32.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pyright]
include = ["src"]
defineConstant = { DEBUG = true }
reportMissingImports = "warning"
reportMissingTypeStubs = true
strictListInference = true
strictDictionaryInference = true
strictSetInference = true
analyzeUnannotatedFunctions = true
strictParameterNoneValue = true
enableTypeIgnoreComments = true
deprecateTypingAliases = true
enableReachabilityAnalysis = true
enableExperimentalFeatures = false
disableBytesTypePromotions = true
