[project]
name = "advent-of-code"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "hatchling>=1.28.0",
    "networkx>=3.6",
    "numpy>=2.3.5",
    "pandas>=2.3.3",
    "pyperclip>=1.11.0",
    "python-dotenv>=1.2.1",
    "regex>=2025.11.3",
    "requests>=2.32.5",
    "shapely>=2.1.2",
]

[dependency-groups]
dev = [
    "pre-commit>=4.5.0",
    "pyright>=1.1.407",
    "ruff>=0.14.7",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["D", "I", "F", "E", "W", "Q"]    # pydocstyle, isort, pyflakes, pycodestyle (error, warning)
fixable = ["ALL"]
ignore = [
    "D100",
    "D104",
    "D105",
    "D107",
    "D205",
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.format]
docstring-code-line-length = "dynamic"
docstring-code-format = true

[tool.pyright]
include = ["src"]
defineConstant = { DEBUG = true }
reportMissingImports = "warning"
reportMissingTypeStubs = true
strictListInference = true
strictDictionaryInference = true
strictSetInference = true
analyzeUnannotatedFunctions = true
strictParameterNoneValue = true
enableTypeIgnoreComments = true
deprecateTypingAliases = true
enableReachabilityAnalysis = true
enableExperimentalFeatures = false
disableBytesTypePromotions = true
